# thefug

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: rust.yml
.github/workflows/: rust.yml
scripts/: build-dev.sh
scripts/dev/: run.fish  run.sh  run.zsh
src/: command_matcher.rs  executor.rs  history.rs  init.rs  main.rs  selector.rs  shell.rs
