[package]
name = "thefug"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true        # Enable Link Time Optimisation
strip = true      # Strip symbols
panic = "abort"   # Don't include backtrace when panics occur

[dependencies]
clap = { version = "4", features = ["derive"] } # https://github.com/clap-rs/clap
inquire = "0" # https://github.com/mikaelmello/inquire
itertools = "0" # https://github.com/rust-itertools/itertools
ngrammatic = "0" # https://github.com/compenguy/ngrammatic
regex = "1" # https://github.com/rust-lang/regex
